epserde/tests/fail/where_clause.stderr
error: proc-macro derive panicked
 --> tests/fail/where_clause.rs:9:10
  |
9 | #[derive(Epserde)]
  |          ^^^^^^^
  |
  = help: message: The derive macros do not support where clauses on the original type.
